<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mocoteam1.musicmatch.LoginActivity">

    <EditText
        android:id="@+id/loginActivityUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_activity_username_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityWelcome"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/loginActivityPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_activity_password_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityUsername"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/loginActivityUsername"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/loginActivityUsername"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/loginActivityWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_activity_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <Button
        android:id="@+id/loginActivityOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/login_activity_ok_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityLoginError" />

    <TextView
        android:id="@+id/loginActivityLoginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/login_activity_login_error"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityPassword" />
</android.support.constraint.ConstraintLayout>
