<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shareSongContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mocoteam1.musicmatch.ShareSong">

    <RelativeLayout
        android:id="@+id/shareSongSongInfos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/shareSongCommentary"
        app:layout_constraintRight_toRightOf="@+id/shareSongCommentary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/shareSongTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/shareSongCover"
            android:text="@string/share_song_title_dummy" />

        <TextView
            android:id="@+id/shareSongArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shareSongTitle"
            android:layout_toEndOf="@+id/shareSongCover"
            android:text="@string/share_song_artist_dummy" />

        <ImageView
            android:id="@+id/shareSongCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@mipmap/ic_launcher" />
    </RelativeLayout>

    <EditText
        android:id="@+id/shareSongCommentary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/share_song_commentary_background_color"
        android:ems="10"
        android:hint="@string/share_song_commentary_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/shareSongShareButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareSongSongInfos"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/shareSongShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/share_song_share_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
